# drl-multibot

./: CMakeLists.txt  README.md  package.xml
algorithms/: cqlite.launch.py  cqlite.py  maxq.launch.py  maxq.py  qlearning.launch.py  qlearning.py  qq.ipynb  sarsa.launch.py  sarsa.py
dqn_agent/: agent_2.py  dqn_agent.py  dqn_agent_1.py  dqn_agent_2.py  dqn_agent_3.py
dqn_environment/: dqn_environment.py  dqn_environment_1.py  dqn_environment_2.py  dqn_environment_3.py  env_test_1.py
dqn_gazebo/: dqn_gazebo.py  dqn_gazebo_1.py  dqn_gazebo_2.py  dqn_gazebo_3.py  gazebo_test_1.py
dqn_test/: __init__.py  dqn_test.py  dqn_test_1.py
env/: respawn.py
graphs/: action1.py  action2.py  action3.py  result1.py  result2.py  result3.py
launch/: drl_nodes1.launch.py  drl_nodes2.launch.py  drl_nodes3.launch.py  six_rsp.launch.py  spawn_six_description.launch.py  spawn_six_robots.launch.xml  spawn_three_description.launch.py  spawn_three_robots.launch.xml  test_bot1.launch.py  three_rsp.launch.py  world.launch.py
rviz/: robot1.rviz
urdf/: burger_1.urdf  burger_2.urdf  burger_3.urdf  burger_4.urdf  burger_5.urdf  burger_6.urdf
worlds/: custom_warehouse.world
